--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/viewExamsPrincipal.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/viewExamsPrincipal.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -7,44 +9,83 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.66666666667" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.ViewExamsPrincipal">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="700.0" style="-fx-background-image: url('images/back.jpg')" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.ViewExamsPrincipal">
     <children>
-        <ComboBox fx:id="idCMB" layoutX="14.0" layoutY="42.0" onAction="#chooseExam" prefHeight="25.0" prefWidth="120.0" promptText="Exam ID" style="-fx-font-family: 'Arial Black';" />
-        <TextField fx:id="subjectTF" editable="false" layoutX="166.0" layoutY="42.0" prefHeight="25.0" prefWidth="112.0" promptText="Subject" style="-fx-font-family: 'Arial Black';" />
-        <TextField fx:id="courseTF" editable="false" layoutX="300.0" layoutY="42.0" prefHeight="25.0" prefWidth="131.0" promptText="Course" style="-fx-font-family: 'Arial Black';" />
-        <TableView fx:id="tableView" layoutX="38.0" layoutY="87.0" onMouseClicked="#makeVisible" prefHeight="214.0" prefWidth="239.0" style="-fx-font-family: 'Arial Black';">
+        <ComboBox fx:id="idCMB" layoutX="150.0" layoutY="39.0" onAction="#chooseExam" prefHeight="25.0" prefWidth="120.0" promptText="Exam ID" style="-fx-font-family: 'Arial Black';" />
+        <TextField fx:id="subjectTF" editable="false" layoutX="279.0" layoutY="39.0" prefHeight="25.0" prefWidth="112.0" promptText="Subject" style="-fx-font-family: 'Arial Black';" />
+        <TextField fx:id="courseTF" editable="false" layoutX="401.0" layoutY="39.0" prefHeight="25.0" prefWidth="131.0" promptText="Course" style="-fx-font-family: 'Arial Black';" />
+        <TableView fx:id="tableView" layoutX="138.0" layoutY="85.0" onMouseClicked="#makeVisible" prefHeight="214.0" prefWidth="239.0" style="-fx-font-family: 'Arial Black';">
             <columns>
                 <TableColumn fx:id="questionCol" editable="false" prefWidth="190.0" text="Question" />
                 <TableColumn fx:id="pointsCol" editable="false" prefWidth="48.666656494140625" text="Points" />
             </columns>
         </TableView>
-        <Rectangle fx:id="rectangle" arcHeight="5.0" arcWidth="5.0" fill="#d4e0eb" height="180.0" layoutX="312.0" layoutY="95.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="239.0" />
-        <TextField fx:id="answer4TF" editable="false" layoutX="317.0" layoutY="237.0" prefHeight="25.0" prefWidth="120.0" style="-fx-font-family: 'Arial Black';" />
-        <TextField fx:id="answer3TF" editable="false" layoutX="317.0" layoutY="194.0" prefHeight="25.0" prefWidth="120.0" style="-fx-font-family: 'Arial Black';" />
-        <TextField fx:id="answer2TF" editable="false" layoutX="317.0" layoutY="148.0" prefHeight="25.0" prefWidth="120.0" style="-fx-font-family: 'Arial Black';" />
-        <TextField fx:id="answer1TF" editable="false" layoutX="317.0" layoutY="101.0" prefHeight="25.0" prefWidth="120.0" style="-fx-font-family: 'Arial Black';" />
-        <ImageView fx:id="v1" fitHeight="33.0" fitWidth="46.0" layoutX="444.0" layoutY="101.0" pickOnBounds="true" preserveRatio="true">
+        <Rectangle fx:id="rectangle" arcHeight="5.0" arcWidth="5.0" fill="#d4e0eb" height="180.0" layoutX="412.0" layoutY="93.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="239.0" />
+        <TextField fx:id="answer4TF" editable="false" layoutX="417.0" layoutY="235.0" prefHeight="25.0" prefWidth="120.0" style="-fx-font-family: 'Arial Black';" />
+        <TextField fx:id="answer3TF" editable="false" layoutX="417.0" layoutY="192.0" prefHeight="25.0" prefWidth="120.0" style="-fx-font-family: 'Arial Black';" />
+        <TextField fx:id="answer2TF" editable="false" layoutX="417.0" layoutY="146.0" prefHeight="25.0" prefWidth="120.0" style="-fx-font-family: 'Arial Black';" />
+        <TextField fx:id="answer1TF" editable="false" layoutX="417.0" layoutY="99.0" prefHeight="25.0" prefWidth="120.0" style="-fx-font-family: 'Arial Black';" />
+        <ImageView fx:id="v1" fitHeight="33.0" fitWidth="46.0" layoutX="544.0" layoutY="99.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../../../../images/check.png" />
             </image>
         </ImageView>
-        <ImageView fx:id="v2" fitHeight="33.0" fitWidth="46.0" layoutX="444.0" layoutY="144.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="v2" fitHeight="33.0" fitWidth="46.0" layoutX="544.0" layoutY="142.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../../../../images/check.png" />
             </image>
         </ImageView>
-        <ImageView fx:id="v3" fitHeight="33.0" fitWidth="46.0" layoutX="444.0" layoutY="190.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="v3" fitHeight="33.0" fitWidth="46.0" layoutX="544.0" layoutY="188.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../../../../images/check.png" />
             </image>
         </ImageView>
-        <ImageView fx:id="v4" fitHeight="33.0" fitWidth="46.0" layoutX="444.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="v4" fitHeight="33.0" fitWidth="46.0" layoutX="544.0" layoutY="231.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../../../../images/check.png" />
             </image>
         </ImageView>
-        <TextField fx:id="authorTF" editable="false" layoutX="454.0" layoutY="42.0" prefHeight="25.0" prefWidth="131.0" promptText="Author" style="-fx-font-family: 'Arial Black';" />
+        <TextField fx:id="authorTF" editable="false" layoutX="543.0" layoutY="39.0" prefHeight="25.0" prefWidth="131.0" promptText="Author" style="-fx-font-family: 'Arial Black';" />
+      <VBox fx:id="Menu" layoutX="-2.0" layoutY="1.0" prefHeight="426.0" prefWidth="100.0" spacing="15.0" style="-fx-border-color: white; -fx-border-width: 5px;" visible="false">
+         <children>
+            <Button fx:id="ApproveBtn" mnemonicParsing="false" onAction="#ApproveRequestsEvent" prefHeight="46.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Approve Requests" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="5.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="ViewGradesBtn" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#ViewGradesEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="View Grades" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button fx:id="ViewExamsBtn" layoutX="10.0" layoutY="45.0" mnemonicParsing="false" onAction="#ViewExamsEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="View Exams" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button fx:id="ViewQuestionsBtn" layoutX="10.0" layoutY="81.0" mnemonicParsing="false" onAction="#ViewQuestionsEvent" prefHeight="52.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="View Questions" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button fx:id="logOutBtn" layoutX="10.0" layoutY="178.0" mnemonicParsing="false" onAction="#LogOut" prefHeight="37.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Log Out" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+         </children>
+      </VBox>
+      <Button fx:id="menuBtn" layoutX="-2.0" layoutY="-3.0" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: white;" text="Menu" textFill="WHITE">
+         <font>
+            <Font name="System Bold Italic" size="15.0" />
+         </font>
+      </Button>
     </children>
 </AnchorPane>
