--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/viewQuestionsPrincipal.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/viewQuestionsPrincipal.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -8,40 +10,79 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.66666666667" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.ViewQuestionsPrincipal">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="700.0" style="-fx-background-image: url('images/back.jpg')" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.ViewQuestionsPrincipal">
     <children>
-        <ComboBox fx:id="idCMB" layoutX="14.0" layoutY="28.0" onAction="#IdChosen" prefHeight="25.0" prefWidth="132.0" promptText="Question ID" style="-fx-font-family: 'Arial Black';" />
-        <TextField fx:id="subjectTF" editable="false" layoutX="177.0" layoutY="28.0" prefHeight="25.0" prefWidth="93.0" promptText="Subject" style="-fx-font-family: 'Arial Black';" />
-        <TextArea fx:id="textTF" layoutX="161.0" layoutY="105.0" prefHeight="55.0" prefWidth="273.0" promptText="Question" style="-fx-font-family: 'Arial Black';" />
-        <TextField fx:id="answer4TF" editable="false" layoutX="328.0" layoutY="219.0" prefHeight="25.0" prefWidth="120.0" promptText="Answer 4" style="-fx-font-family: 'Arial Black';" />
-        <TextField fx:id="answer3TF" editable="false" layoutX="328.0" layoutY="181.0" prefHeight="25.0" prefWidth="120.0" promptText="Answer 3" style="-fx-font-family: 'Arial Black';" />
-        <TextField fx:id="answer2TF" editable="false" layoutX="124.0" layoutY="216.0" prefHeight="25.0" prefWidth="120.0" promptText="Answer 2" style="-fx-font-family: 'Arial Black';" />
-        <TextField fx:id="answer1TF" editable="false" layoutX="124.0" layoutY="179.0" prefHeight="25.0" prefWidth="120.0" promptText="Answer 1" style="-fx-font-family: 'Arial Black';" />
-        <TableView fx:id="tableView" layoutX="475.0" layoutY="25.0" prefHeight="97.0" prefWidth="112.0">
+        <ComboBox fx:id="idCMB" layoutX="128.0" layoutY="30.0" onAction="#IdChosen" prefHeight="25.0" prefWidth="132.0" promptText="Question ID" style="-fx-font-family: 'Arial Black';" />
+        <TextField fx:id="subjectTF" editable="false" layoutX="291.0" layoutY="30.0" prefHeight="25.0" prefWidth="93.0" promptText="Subject" style="-fx-font-family: 'Arial Black';" />
+        <TextArea fx:id="textTF" layoutX="248.0" layoutY="104.0" prefHeight="55.0" prefWidth="273.0" promptText="Question" style="-fx-font-family: 'Arial Black';" />
+        <TextField fx:id="answer4TF" editable="false" layoutX="415.0" layoutY="218.0" prefHeight="25.0" prefWidth="120.0" promptText="Answer 4" style="-fx-font-family: 'Arial Black';" />
+        <TextField fx:id="answer3TF" editable="false" layoutX="415.0" layoutY="180.0" prefHeight="25.0" prefWidth="120.0" promptText="Answer 3" style="-fx-font-family: 'Arial Black';" />
+        <TextField fx:id="answer2TF" editable="false" layoutX="211.0" layoutY="215.0" prefHeight="25.0" prefWidth="120.0" promptText="Answer 2" style="-fx-font-family: 'Arial Black';" />
+        <TextField fx:id="answer1TF" editable="false" layoutX="211.0" layoutY="178.0" prefHeight="25.0" prefWidth="120.0" promptText="Answer 1" style="-fx-font-family: 'Arial Black';" />
+        <TableView fx:id="tableView" layoutX="562.0" layoutY="24.0" prefHeight="97.0" prefWidth="112.0">
             <columns>
                 <TableColumn fx:id="courseCol" minWidth="11.0" prefWidth="110.0" style="-fx-font-family: 'Arial Black';" text="Courses" />
             </columns>
         </TableView>
-        <ImageView fx:id="v1" fitHeight="33.0" fitWidth="46.0" layoutX="252.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="v1" fitHeight="33.0" fitWidth="46.0" layoutX="339.0" layoutY="174.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../../../../images/check.png" />
             </image>
         </ImageView>
-        <ImageView fx:id="v2" fitHeight="33.0" fitWidth="46.0" layoutX="252.0" layoutY="212.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="v2" fitHeight="33.0" fitWidth="46.0" layoutX="339.0" layoutY="211.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../../../../images/check.png" />
             </image>
         </ImageView>
-        <ImageView fx:id="v3" fitHeight="33.0" fitWidth="46.0" layoutX="456.0" layoutY="177.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="v3" fitHeight="33.0" fitWidth="46.0" layoutX="543.0" layoutY="176.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../../../../images/check.png" />
             </image>
         </ImageView>
-        <ImageView fx:id="v4" fitHeight="33.0" fitWidth="46.0" layoutX="456.0" layoutY="215.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="v4" fitHeight="33.0" fitWidth="46.0" layoutX="543.0" layoutY="214.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../../../../images/check.png" />
             </image>
         </ImageView>
+      <VBox fx:id="Menu" layoutX="-6.0" layoutY="-2.0" prefHeight="426.0" prefWidth="100.0" spacing="15.0" style="-fx-border-color: white; -fx-border-width: 5px;" visible="false">
+         <children>
+            <Button fx:id="ApproveBtn" mnemonicParsing="false" onAction="#ApproveRequestsEvent" prefHeight="46.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Approve Requests" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="5.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="ViewGradesBtn" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#ViewGradesEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="View Grades" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button fx:id="ViewExamsBtn" layoutX="10.0" layoutY="45.0" mnemonicParsing="false" onAction="#ViewExamsEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="View Exams" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button fx:id="ViewQuestionsBtn" layoutX="10.0" layoutY="81.0" mnemonicParsing="false" onAction="#ViewQuestionsEvent" prefHeight="52.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="View Questions" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button fx:id="logOutBtn" layoutX="10.0" layoutY="178.0" mnemonicParsing="false" onAction="#LogOut" prefHeight="37.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Log Out" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+         </children>
+      </VBox>
+      <Button fx:id="menuBtn" layoutX="-6.0" layoutY="-3.0" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: white;" text="Menu" textFill="WHITE">
+         <font>
+            <Font name="System Bold Italic" size="15.0" />
+         </font>
+      </Button>
     </children>
 </AnchorPane>
