--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/buildExam.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/buildExam.fxml
@@ -1,43 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.BuildExam">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="700.0" style="-fx-background-image: url('images/back.jpg')" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.BuildExam">
    <children>
-      <ComboBox fx:id="subjectCMB" layoutX="14.0" layoutY="34.0" onAction="#selectSubject" prefHeight="25.0" prefWidth="143.0" promptText="Subject" style="-fx-font-family: 'Arial Black';" />
-      <ListView fx:id="questionsList" accessibleRole="CHECK_BOX" layoutX="208.0" layoutY="34.0" onMouseClicked="#selectQuestion" prefHeight="211.0" prefWidth="315.0" style="-fx-font-family: 'Arial Black';" />
-      <Button fx:id="doneBTN" layoutX="530.0" layoutY="127.0" mnemonicParsing="false" onAction="#done" style="-fx-background-color: #70879d;" text="Done" textFill="WHITE">
+      <ComboBox fx:id="subjectCMB" layoutX="140.0" layoutY="36.0" onAction="#selectSubject" prefHeight="25.0" prefWidth="143.0" promptText="Subject" style="-fx-font-family: 'Arial Black';" />
+      <ListView fx:id="questionsList" accessibleRole="CHECK_BOX" layoutX="318.0" layoutY="36.0" onMouseClicked="#selectQuestion" prefHeight="211.0" prefWidth="315.0" style="-fx-font-family: 'Arial Black';" />
+      <Button fx:id="doneBTN" layoutX="640.0" layoutY="129.0" mnemonicParsing="false" onAction="#done" style="-fx-background-color: #70879d;" text="Done" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <TextField fx:id="idTF" layoutX="14.0" layoutY="99.0" onAction="#setID" prefHeight="25.0" prefWidth="143.0" promptText="Exam ID (2 digits)" style="-fx-font-family: 'Arial Black';" />
-      <TextField fx:id="timeTF" layoutX="14.0" layoutY="131.0" onAction="#setTime" prefHeight="25.0" prefWidth="143.0" promptText="Time" style="-fx-font-family: 'Arial Black';" />
-      <ComboBox fx:id="courseCMB" layoutX="14.0" layoutY="66.0" onAction="#selectCourse" prefHeight="25.0" prefWidth="170.0" promptText="Course" style="-fx-font-family: 'Arial Black';" />
-      <TextField fx:id="pointsTF" layoutX="54.0" layoutY="232.0" onAction="#points" prefHeight="25.0" prefWidth="63.0" promptText="Points" style="-fx-font-family: 'Arial Black';" />
-      <Button fx:id="addBTN" layoutX="64.0" layoutY="270.0" mnemonicParsing="false" onAction="#addQuestion" style="-fx-background-color: #70879d;" text="ADD" textFill="WHITE">
+      <TextField fx:id="idTF" layoutX="140.0" layoutY="101.0" onAction="#setID" prefHeight="25.0" prefWidth="143.0" promptText="Exam ID (2 digits)" style="-fx-font-family: 'Arial Black';" />
+      <TextField fx:id="timeTF" layoutX="140.0" layoutY="133.0" onAction="#setTime" prefHeight="25.0" prefWidth="143.0" promptText="Time" style="-fx-font-family: 'Arial Black';" />
+      <ComboBox fx:id="courseCMB" layoutX="140.0" layoutY="68.0" onAction="#selectCourse" prefHeight="25.0" prefWidth="170.0" promptText="Course" style="-fx-font-family: 'Arial Black';" />
+      <TextField fx:id="pointsTF" layoutX="180.0" layoutY="234.0" onAction="#points" prefHeight="25.0" prefWidth="63.0" promptText="Points" style="-fx-font-family: 'Arial Black';" />
+      <Button fx:id="addBTN" layoutX="190.0" layoutY="272.0" mnemonicParsing="false" onAction="#addQuestion" style="-fx-background-color: #70879d;" text="ADD" textFill="WHITE">
          <font>
             <Font name="System Bold" size="9.0" />
          </font>
       </Button>
-      <TextField fx:id="totalTF" editable="false" layoutX="91.0" layoutY="301.0" prefHeight="25.0" prefWidth="46.0" style="-fx-font-family: 'Arial Black';" />
-      <Button fx:id="clearBTN" layoutX="58.0" layoutY="195.0" mnemonicParsing="false" onAction="#clearPressed" style="-fx-background-color: #70879d;" text="Clear" textFill="WHITE">
+      <TextField fx:id="totalTF" editable="false" layoutX="217.0" layoutY="303.0" prefHeight="25.0" prefWidth="46.0" style="-fx-font-family: 'Arial Black';" />
+      <Button fx:id="clearBTN" layoutX="184.0" layoutY="197.0" mnemonicParsing="false" onAction="#clearPressed" style="-fx-background-color: #70879d;" text="Clear" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Label layoutX="24.0" layoutY="305.0" text="Points Left:" textFill="WHITE">
+      <Label layoutX="150.0" layoutY="307.0" text="Points Left:" textFill="WHITE">
          <font>
             <Font name="System Bold Italic" size="12.0" />
          </font></Label>
-      <TextField fx:id="digitcode" layoutX="14.0" layoutY="162.0" onAction="#setTime" prefHeight="25.0" prefWidth="143.0" promptText="4-digit code" style="-fx-font-family: 'Arial Black';" />
-      <TextField fx:id="freeText1" layoutX="229.0" layoutY="257.0" prefHeight="25.0" prefWidth="273.0" promptText="Free Text For Teacher" style="-fx-font-family: 'Arial Black';" />
-      <TextField fx:id="freeText2" layoutX="229.0" layoutY="289.0" prefHeight="25.0" prefWidth="273.0" promptText="Free Text For Student" style="-fx-font-family: 'Arial Black';" />
+      <TextField fx:id="digitcode" layoutX="140.0" layoutY="164.0" onAction="#setTime" prefHeight="25.0" prefWidth="143.0" promptText="4-digit code" style="-fx-font-family: 'Arial Black';" />
+      <TextField fx:id="freeText1" layoutX="339.0" layoutY="259.0" prefHeight="25.0" prefWidth="273.0" promptText="Free Text For Teacher" style="-fx-font-family: 'Arial Black';" />
+      <TextField fx:id="freeText2" layoutX="339.0" layoutY="291.0" prefHeight="25.0" prefWidth="273.0" promptText="Free Text For Student" style="-fx-font-family: 'Arial Black';" />
+      <VBox fx:id="Menu" prefHeight="420.0" prefWidth="127.0" spacing="15.0" style="-fx-border-color: white; -fx-border-width: 5px;" visible="false">
+         <children>
+            <Button fx:id="addQuestionBtn" mnemonicParsing="false" onAction="#AddQuestionEvent" prefHeight="35.0" prefWidth="110.0" style="-fx-background-color: transparent;" text="Add Question" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="5.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="buildExamBtn" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#CreateExamEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="Build Exam" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button fx:id="checkGradesBtn" layoutX="10.0" layoutY="45.0" mnemonicParsing="false" onAction="#CheckGradesEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="Check Grades" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button fx:id="requestTimeBtn" layoutX="10.0" layoutY="81.0" mnemonicParsing="false" onAction="#RequestTimeEvent" prefHeight="60.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Request Extra Time" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button fx:id="logOutBtn" layoutX="10.0" layoutY="167.0" mnemonicParsing="false" onAction="#LogOut" prefHeight="40.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Log Out" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+         </children>
+      </VBox>
+      <Button fx:id="menuBtn" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: white;" text="Menu" textFill="WHITE">
+         <font>
+            <Font name="System Bold Italic" size="15.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
