--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/checkGradesTeacher.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/checkGradesTeacher.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -7,35 +8,73 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.CheckGradesTeacher">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="700.0" style="-fx-background-image: url('images/back.jpg')" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.CheckGradesTeacher">
    <children>
-      <Rectangle fx:id="rectangle" arcHeight="5.0" arcWidth="5.0" fill="#d4e0eb" height="143.0" layoutX="294.0" layoutY="125.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="276.0" />
-      <ComboBox fx:id="idCMB" layoutX="14.0" layoutY="42.0" onAction="#chooseExam" prefHeight="25.0" prefWidth="103.0" promptText="Exam ID" style="-fx-font-family: 'Arial Black';" />
-      <TextField fx:id="subjectTF" editable="false" layoutX="139.0" layoutY="42.0" prefHeight="25.0" prefWidth="83.0" promptText="Subject" style="-fx-font-family: 'Arial Black';" />
-      <TextField fx:id="courseTF" editable="false" layoutX="235.0" layoutY="42.0" prefHeight="25.0" prefWidth="121.0" promptText="Course" style="-fx-font-family: 'Arial Black';" />
-      <TableView fx:id="tableView" layoutX="47.0" layoutY="105.0" onMouseClicked="#makeVisible" prefHeight="182.0" prefWidth="212.0" style="-fx-font-family: 'Arial Black';">
+      <Rectangle fx:id="rectangle" arcHeight="5.0" arcWidth="5.0" fill="#d4e0eb" height="143.0" layoutX="399.0" layoutY="125.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="276.0" />
+      <ComboBox fx:id="idCMB" layoutX="152.0" layoutY="46.0" onAction="#chooseExam" prefHeight="25.0" prefWidth="103.0" promptText="Exam ID" style="-fx-font-family: 'Arial Black';" />
+      <TextField fx:id="subjectTF" editable="false" layoutX="277.0" layoutY="46.0" prefHeight="25.0" prefWidth="83.0" promptText="Subject" style="-fx-font-family: 'Arial Black';" />
+      <TextField fx:id="courseTF" editable="false" layoutX="373.0" layoutY="46.0" prefHeight="25.0" prefWidth="121.0" promptText="Course" style="-fx-font-family: 'Arial Black';" />
+      <TableView fx:id="tableView" layoutX="152.0" layoutY="105.0" onMouseClicked="#makeVisible" prefHeight="182.0" prefWidth="212.0" style="-fx-font-family: 'Arial Black';">
          <columns>
             <TableColumn fx:id="nameCol" editable="false" prefWidth="150.0" text="Student Name" />
             <TableColumn fx:id="gradeCol" editable="false" prefWidth="60.0" text="Grade" />
          </columns>
       </TableView>
-      <TextField fx:id="explainTF" layoutX="310.0" layoutY="192.0" prefHeight="25.0" prefWidth="243.0" style="-fx-font-family: 'Arial Black';" />
-      <Label fx:id="explainLBL" layoutX="309.0" layoutY="172.0" prefHeight="21.0" prefWidth="149.0" text="Explain why:">
+      <TextField fx:id="explainTF" layoutX="415.0" layoutY="192.0" prefHeight="25.0" prefWidth="243.0" style="-fx-font-family: 'Arial Black';" />
+      <Label fx:id="explainLBL" layoutX="414.0" layoutY="172.0" prefHeight="21.0" prefWidth="149.0" text="Explain why:">
          <font>
             <Font name="System Bold Italic" size="15.0" />
          </font></Label>
-      <Button fx:id="submitBTN" layoutX="403.0" layoutY="230.0" mnemonicParsing="false" onAction="#changeGrade" style="-fx-background-color: #70879d;" text="Submit" textFill="WHITE">
+      <Button fx:id="submitBTN" layoutX="508.0" layoutY="230.0" mnemonicParsing="false" onAction="#changeGrade" style="-fx-background-color: #70879d;" text="Submit" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Label fx:id="changeLBL" layoutX="309.0" layoutY="138.0" text="Change grade to:">
+      <Label fx:id="changeLBL" layoutX="414.0" layoutY="138.0" text="Change grade to:">
          <font>
             <Font name="System Bold Italic" size="15.0" />
          </font></Label>
-      <TextField fx:id="changeTF" layoutX="439.0" layoutY="136.0" prefHeight="11.0" prefWidth="49.0" style="-fx-font-family: 'Arial Black';" />
+      <TextField fx:id="changeTF" layoutX="544.0" layoutY="136.0" prefHeight="11.0" prefWidth="49.0" style="-fx-font-family: 'Arial Black';" />
+      <VBox fx:id="Menu" prefHeight="420.0" prefWidth="127.0" spacing="15.0" style="-fx-border-color: white; -fx-border-width: 5px;" visible="false">
+         <children>
+            <Button fx:id="addQuestionBtn" mnemonicParsing="false" onAction="#AddQuestionEvent" prefHeight="35.0" prefWidth="110.0" style="-fx-background-color: transparent;" text="Add Question" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="5.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="buildExamBtn" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#CreateExamEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="Build Exam" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button fx:id="checkGradesBtn" layoutX="10.0" layoutY="45.0" mnemonicParsing="false" onAction="#CheckGradesEvent" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="Check Grades" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button fx:id="requestTimeBtn" layoutX="10.0" layoutY="81.0" mnemonicParsing="false" onAction="#RequestTimeEvent" prefHeight="60.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Request Extra Time" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button fx:id="logOutBtn" layoutX="10.0" layoutY="167.0" mnemonicParsing="false" onAction="#LogOut" prefHeight="40.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Log Out" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+         </children>
+      </VBox>
+      <Button fx:id="menuBtn" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: white;" text="Menu" textFill="WHITE">
+         <font>
+            <Font name="System Bold Italic" size="15.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
