--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/examPage.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/examPage.fxml
@@ -41,12 +41,13 @@
             <font>
                 <Font name="System Bold Italic" size="12.0" />
             </font>
+
         </Button>
         <Label fx:id="questionText" layoutX="83.0" layoutY="75.0" prefHeight="58.0" prefWidth="584.0" style="-fx-background-color: #E0E0E0;">
             <font>
                 <Font name="Arial Black" size="12.0" />
             </font></Label>
-        <Button fx:id="aboutBtn" layoutX="569.0" layoutY="17.0" mnemonicParsing="false" onAction="#aboutPressed" prefHeight="25.0" prefWidth="118.0" style="-fx-background-color: #70879d;" text="Notes" textFill="WHITE">
+        <Button fx:id="aboutBtn" layoutX="568.0" layoutY="29.0" mnemonicParsing="false" onAction="#aboutPressed" prefHeight="25.0" prefWidth="118.0" style="-fx-background-color: #70879d;" text="Notes" textFill="WHITE">
             <font>
                 <Font name="System Bold Italic" size="12.0" />
             </font>
@@ -54,6 +55,11 @@
         <Label layoutX="14.0" layoutY="17.0" prefHeight="58.0" prefWidth="206.0" text="Good Luck !" textAlignment="CENTER">
             <font>
                 <Font name="System Bold Italic" size="36.0" />
+            </font>
+        </Label>
+        <Label fx:id="timerLabel" alignment="CENTER" contentDisplay="BOTTOM" layoutX="316.0" layoutY="29.0" prefHeight="25.0" prefWidth="118.0" style="-fx-background-color: #E0E0E0;" text="00:00">
+            <font>
+                <Font name="Arial Black" size="12.0" />
             </font>
         </Label>
     </children>
