--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/approveRequests.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/approveRequests.fxml
@@ -28,7 +28,7 @@
                 <TextArea fx:id="explanationTA" editable="false" prefHeight="96.0" prefWidth="293.0" promptText="Explanation" style="-fx-font-family: 'Arial Black';" />
             </children>
         </VBox>
-        <Button fx:id="approveBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="318.0" layoutY="285.0" mnemonicParsing="false" onAction="#Approve" style="-fx-background-color: #70879d;" text="Approve" textFill="WHITE">
+        <Button fx:id="approveBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="277.0" layoutY="285.0" mnemonicParsing="false" onAction="#Approve" style="-fx-background-color: #70879d;" text="Approve" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="12.0" />
             </font>
@@ -68,6 +68,11 @@
       <Button fx:id="menuBtn" layoutY="-3.0" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: white;" text="Menu" textFill="WHITE">
          <font>
             <Font name="System Bold Italic" size="15.0" />
+         </font>
+      </Button>
+      <Button fx:id="declineBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="350.0" layoutY="285.0" mnemonicParsing="false" onAction="#Decline" prefHeight="25.0" prefWidth="65.0" style="-fx-background-color: #70879d;" text="Decline" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
          </font>
       </Button>
     </children>
