--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/studentsPage.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/studentsPage.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
@@ -11,7 +12,7 @@
     <children>
         <BorderPane fx:id="BorderPane" prefHeight="420.0" prefWidth="700.0">
             <left>
-                <VBox fx:id="Menu" prefHeight="200.0" prefWidth="100.0" spacing="15.0" visible="false" BorderPane.alignment="CENTER" style="-fx-border-color: white; -fx-border-width: 5px;">
+                <VBox fx:id="Menu" prefHeight="200.0" prefWidth="100.0" spacing="15.0" style="-fx-border-color: white; -fx-border-width: 5px;" visible="false" BorderPane.alignment="CENTER">
                     <children>
                         <Button fx:id="doExamBtn" mnemonicParsing="false" onAction="#DoExamAction" prefHeight="35.0" prefWidth="108.0" style="-fx-background-color: transparent;" text="Do Exam" textFill="WHITE">
                             <font>
@@ -30,7 +31,14 @@
                 </VBox>
             </left>
             <center>
-                <VBox fx:id="detailVBox" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+                <VBox fx:id="detailVBox" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label fx:id="welcome" alignment="CENTER" prefHeight="156.0" prefWidth="600.0" textFill="WHITE">
+                     <font>
+                        <Font name="Century" size="47.0" />
+                     </font>
+                  </Label>
+               </children></VBox>
             </center>
         </BorderPane>
         <Button fx:id="menuBtn" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: white;" text="Menu" textFill="WHITE">
