--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/teacherPage.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/teacherPage.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
@@ -45,7 +46,14 @@
             </VBox>
          </left>
          <center>
-            <VBox fx:id="detailVBox" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+            <VBox fx:id="detailVBox" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label fx:id="welcome" alignment="CENTER" prefHeight="156.0" prefWidth="600.0" textFill="WHITE">
+                     <font>
+                        <Font name="Century" size="47.0" />
+                     </font>
+                  </Label>
+               </children></VBox>
          </center>
       </BorderPane>
       <Button fx:id="menuBtn" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: white;" text="Menu" textFill="WHITE">
